--- a/css/start.css
+++ b/css/start.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:300,400,700,900&display=swap');
-
+/*
+ny idé
+*/
 * {
     margin: 0;
     padding: 0;
