--- a/css/start.css
+++ b/css/start.css
@@ -42,10 +42,18 @@ h1 {
     
 }
 
-img {
+#pay4it_logo {
     position: absolute;
     top: 90%;
     left: 50%;
     width: 250px;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -100%);
+}
+
+#cards {
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    
+    transform: translate(-50%, 50%);
 }
