--- a/css/step1.css
+++ b/css/step1.css
@@ -8,8 +8,47 @@ body {
     background-color: rgb(10, 10, 10);
     color: azure;
     height: 100%;
-    
+    overflow: hidden
+
 }
+
+/******************
+ * Accordion
+ */
+.accordion {
+    background-color: black;
+    color: azure;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+
+}
+
+.accordion li {
+    padding-bottom: 10px;
+    list-style-type: none;
+}
+
+.accordion-control {
+    background-color: rgb(255, 0, 85);
+    color: #fff;
+    display: block;
+    width: 100%;
+    padding: 0.5em 0.5em 0.5em 0.7em;
+    margin: 0;
+    border-top: solid 3px black;
+    border-left: none;
+    border-right: none;
+    border-bottom: none;
+    font-size: 24px;
+}
+
+.accordion-panel {
+    display: none;
+    height: 100vh;
+}
+
+
 
 /******************
  * GRID CONTROL
@@ -23,17 +62,17 @@ body {
     grid-template-columns: auto auto auto;
     grid-column-gap: 1em;
     grid-row-gap: 1em;
-    
+
     position: relative;
-    
+
     left: 50%;
     height: 500px;
     transform: translate(-50%, 50%);
-    
+
 }
 
 .grid-container>div {
-/*    background-color: gray; */
+    /*    background-color: gray; */
     padding: 1em;
 }
 
@@ -42,70 +81,70 @@ body {
 */
 .content {
     display: grid;
-    grid-template-columns: repeat( 2, minmax(480px, 1fr));
+    grid-template-columns: repeat(2, minmax(480px, 1fr));
     grid-column-gap: 1em;
     grid-row-gap: 1em;
 }
 
-.content > button{
+.content>button {
     position: relative;
     padding: 2em;
     left: 50%;
     transform: translate(-50%, 0%);
-    
+
     background-color: rgb(255, 0, 85);
-        
+
     border-radius: 15px;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
 }
 
-.content > button:focus{
+.content>button:focus {
     position: relative;
     padding: 2em;
     left: 50%;
     transform: translate(-50%, 0%);
-        
+
     background-color: rgb(87, 0, 29);
-    
+
     border-radius: 15px;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
+    
     cursor: pointer;
 }
 
-.content > .active{
+.content>.active {
     position: relative;
     padding: 2em;
     left: 50%;
     transform: translate(-50%, 0%);
-        
+
     background-color: rgb(87, 0, 29);
-    
+
     border-radius: 15px;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
+    
     cursor: pointer;
 }
 
 /******************
  * BUTTONS
  */
-.time-btn{
+.time-btn {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 1em;
-    grid-row-gap: 1em;  
+    grid-row-gap: 1em;
     position: relative;
     height: 550px;
     left: 50%;
@@ -115,7 +154,7 @@ body {
 
 .nested-btn-tid {
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-column-gap: 1em;
     grid-row-gap: 1em;
     grid-auto-rows: minmax(80px, 80px);
@@ -128,14 +167,15 @@ body {
     height: 80px;
     width: 80px;
     transform: translate(-50%, 0%);
-    border-radius: 5px;
-    
+    border-radius: 15px;
+
 
     background-color: rgb(0, 0, 0);
 
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
+    font-size: 30px;
     cursor: pointer;
 }
 
@@ -145,7 +185,7 @@ body {
     height: 80px;
     width: 80px;
     transform: translate(-50%, 0%);
-    border-radius: 5px;
+    border-radius: 15px;
 
     background-color: rgb(0, 119, 255);
 
@@ -162,7 +202,7 @@ body {
     height: 80px;
     width: 80px;
     transform: translate(-50%, 0%);
-    border-radius: 5px;
+    border-radius: 15px;
 
     background-color: rgb(0, 119, 255);
 
@@ -177,14 +217,14 @@ body {
     font-size: large;
 }
 
-.totalPris{
+.totalPris, .totalPris2Id {
     position: relative;
     left: 50%;
     height: auto;
-    width: 400px;
+    width: 500px;
     transform: translate(-50%, 0%);
     border-color: rgb(200, 200, 200);
-    border-radius: 5px;
+    border-radius: 15px;
     padding: 15px 15px;
 
     background-color: rgb(107, 107, 107);
@@ -195,7 +235,42 @@ body {
     font-weight: bold;
 }
 
-.menu{
+/******************
+ * STEP2
+ */
+.payment {
+    display: grid;
+    grid-template-columns: auto;
+    grid-column-gap: 1em;
+    grid-row-gap: 1em;
+    justify-items: center;
+    padding-bottom: 50px;
+    
+}
+
+.paymentOption>button {
+    position: relative;
+    
+    width: 500px;
+    height: 250px;
+    
+    
+    border: none;
+    border-radius: 15px;
+    background-color: rgb(255, 0, 85);
+}
+
+.paymentOption>button>i {
+    font-size: 150px;
+    color: azure;
+}
+
+.paymentOption>button>img {
+width: 250px;
+width: 250px;
+}
+
+.menu {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 1em;
@@ -203,13 +278,13 @@ body {
     padding: 15px 32px;
 }
 
-.menu > button {
+.menu>button {
     position: relative;
     left: 50%;
     height: 50px;
     width: 250px;
     transform: translate(-50%, 0%);
-    border-radius: 5px;   
+    border-radius: 5px;
 
     color: rgb(0, 0, 0);
 
@@ -217,4 +292,35 @@ body {
     font-size: 24px;
     font-weight: bold;
     cursor: pointer;
+}
+
+#errorMessage {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column-gap: 1em;
+    grid-row-gap: 1em;
+    justify-items: center;
+    align-content: center;
+    height: 100vh;
+    font-size: 32px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+}
+
+#errorMessage h3{
+    font-size: 26px;
+    color: rgb(255, 255, 255);
+}
+
+#errorMessage h3 b{
+    font-size: 36px;
+    color: rgb(255, 255, 255);
+}
+
+#errorMessage>p {
+    font-size: 26px;
+    font-weight: bolder;
+    color: rgb(240, 0, 55);
+
 }
