--- a/css/step1.css
+++ b/css/step1.css
@@ -21,7 +21,10 @@ body {
     margin: 0;
     padding: 0;
     overflow: auto;
+}
 
+.accordion h3{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .accordion li {
@@ -76,6 +79,20 @@ body {
     padding: 1em;
 }
 
+.grid-container h1 {
+    color: white;
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    text-decoration: none;
+}
+
+
+.grid-container h2 {
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 /******************
 * KABINER
 */
@@ -91,16 +108,13 @@ body {
     padding: 2em;
     left: 50%;
     transform: translate(-50%, 0%);
-
     background-color: rgb(255, 0, 85);
-
     border-radius: 15px;
+    border-color: black;
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center;
-    text-decoration: none;
     font-size: 18px;
     cursor: pointer;
+    outline: none;
 }
 
 .content>button:focus {
@@ -108,15 +122,11 @@ body {
     padding: 2em;
     left: 50%;
     transform: translate(-50%, 0%);
-
-    background-color: rgb(87, 0, 29);
-
+    background-color: rgb(0, 119, 255);
     border-radius: 15px;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center;
-    text-decoration: none;
-    
+    /*border: solid 10px;*/
+    border-color:black;
+    font-size: 18px;
     cursor: pointer;
 }
 
@@ -125,17 +135,113 @@ body {
     padding: 2em;
     left: 50%;
     transform: translate(-50%, 0%);
-
-    background-color: rgb(87, 0, 29);
-
+    background-color: rgb(0, 119, 255);
     border-radius: 15px;
+    /*border: solid 10px;*/
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center;
-    text-decoration: none;
-    
+    font-size: 18px;   
     cursor: pointer;
 }
+
+button{
+    position: relative;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    font-size: 24px;
+    color: #000000;
+  }
+  button:before{
+    content: '';
+    position: absolute;
+    top: -4px;
+    left: -4px;
+    width: 20;
+    height: 0;
+    background: transparent;
+    border-radius: 14px;
+    border: 4px solid transparent;
+  }
+  button:hover:enabled:before{
+    animation: animate 0.25s linear forwards;
+    animation-delay: 0.25s;
+  }
+  @keyframes animate{
+    0%{
+      width: 0;
+      height: 0;
+      border: solid 4px;
+      border-radius: 16px;
+      border-top-color: #ffffff;
+      border-bottom-color: transparent;
+      border-left-color: transparent;
+      border-right-color: transparent;
+    }
+    50%{
+      width: 100%;
+      height: 0;
+      border-radius: 16px;
+      border-top-color: rgb(255, 0, 85);
+      border-bottom-color: transparent;
+      border-left-color: transparent;
+      border-right-color: rgb(255, 0, 85);
+    }
+    100%{
+      width: 100%;
+      height: 100%;
+      border-radius: 16px;
+      border-top-color: #ffffff;
+      border-bottom-color: transparent;
+      border-left-color: transparent;
+      border-right-color: #ffffff;
+    }
+  }
+
+  button:after{
+    content: '';
+    position: absolute;
+    top: -4px;
+    left: -4px;
+    width: 0;
+    height: 0;
+    background: transparent;
+    border-radius: 14px;
+    border: 4px solid transparent;
+  }
+  button:hover:enabled:after{
+    animation: animate2 0.25s linear forwards;
+    animation-delay: 0.50s;
+  }
+  @keyframes animate2{
+    0%{
+      width: 0;
+      height: 0;
+      border-radius: 16px;
+      border-top-color: transparent;
+      border-bottom-color: transparent;
+      border-left-color: #ffffff;
+      border-right-color: transparent;
+    }
+    50%{
+      width: 0;
+      height: 100%;
+      border-radius: 16px;
+      border-top-color: transparent;
+      border-bottom-color: rgb(255, 0, 85);
+      border-left-color: rgb(255, 0, 85);
+      border-right-color: transparent;
+    }
+    100%{
+      width: 100%;
+      height: 100%;
+      border-radius: 16px;
+      border-top-color: transparent;
+      border-bottom-color: #ffffff;
+      border-left-color: #ffffff;
+      border-right-color: transparent;
+    }
+  }
+  
 
 /******************
  * BUTTONS
@@ -168,14 +274,16 @@ body {
     width: 80px;
     transform: translate(-50%, 0%);
     border-radius: 15px;
+    outline: none;
 
 
     background-color: rgb(0, 0, 0);
 
     color: white;
+    font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    font-size: 30px;
+    
     cursor: pointer;
 }
 
@@ -258,6 +366,7 @@ body {
     border: none;
     border-radius: 15px;
     background-color: rgb(255, 0, 85);
+    outline: none;
 }
 
 .paymentOption>button>i {
@@ -292,6 +401,7 @@ width: 250px;
     font-size: 24px;
     font-weight: bold;
     cursor: pointer;
+    outline: none;
 }
 
 #errorMessage {
