--- a/css/step1.css
+++ b/css/step1.css
@@ -56,7 +56,7 @@ body {
 /******************
  * GRID CONTROL
  */
-#grid {
+#grid{
     display: none;
 }
 
@@ -162,7 +162,7 @@ button{
     border-radius: 14px;
     border: 4px solid transparent;
   }
-  button:hover:enabled:before{
+  button:focus:enabled:before{
     animation: animate 0.25s linear forwards;
     animation-delay: 0.25s;
   }
@@ -208,7 +208,7 @@ button{
     border-radius: 14px;
     border: 4px solid transparent;
   }
-  button:hover:enabled:after{
+  button:focus:enabled:after{
     animation: animate2 0.25s linear forwards;
     animation-delay: 0.50s;
   }
@@ -369,14 +369,19 @@ button{
     outline: none;
 }
 
+.paymentOption>button:focus {
+    background-color: rgb(0, 119, 255);
+    outline: none;
+}
+
 .paymentOption>button>i {
     font-size: 150px;
     color: azure;
 }
 
 .paymentOption>button>img {
-width: 250px;
-width: 250px;
+width: 300px;
+width: 300px;
 }
 
 .menu {
@@ -403,6 +408,60 @@ width: 250px;
     cursor: pointer;
     outline: none;
 }
+
+/******************
+ * LOADING SPINNER - by Gus Alaniz - https://codepen.io/madebygus/pen/EjBvXR
+ */
+
+section {
+  width: 200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.spinner {
+  animation: rotate 1.4s linear infinite;
+  -webkit-animation: rotate 1.4s linear infinite;
+  -moz-animation: rotate 1.4s linear infinite;
+  width:174px;
+  height:174px;
+  position: relative;
+}
+
+.spinner-dot {
+  width:274px;
+  height:274px;
+  position: relative;
+  top: 0;
+}
+
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes rotate {
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@-moz-keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.path {
+  stroke-dasharray: 170;
+  stroke-dashoffset: 20;
+}
+
+/******************
+ * Error Message if there is an error in the API part
+ */
 
 #errorMessage {
     display: grid;
