--- a/css/step1.css
+++ b/css/step1.css
@@ -33,7 +33,7 @@ body {
 }
 
 .accordion-control {
-    background-color: rgb(255, 0, 85);
+    background-color: black
     color: #fff;
     display: block;
     width: 100%;
@@ -67,10 +67,10 @@ body {
     grid-row-gap: 1em;
 
     position: relative;
-
+    top: 10%;
     left: 50%;
-    height: 500px;
-    transform: translate(-50%, 50%);
+/*height: 500px;*/
+    transform: translate(-50%, 0%);
 
 }
 
@@ -93,6 +93,11 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.grid-container p {
+  font-size: 24px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+}
 /******************
 * KABINER
 */
@@ -112,7 +117,7 @@ body {
     border-radius: 15px;
     border-color: black;
     color: white;
-    font-size: 18px;
+    /*font-size: 18px;*/
     cursor: pointer;
     outline: none;
 }
@@ -126,7 +131,7 @@ body {
     border-radius: 15px;
     /*border: solid 10px;*/
     border-color:black;
-    font-size: 18px;
+    /*font-size: 18px;*/
     cursor: pointer;
 }
 
@@ -139,7 +144,7 @@ body {
     border-radius: 15px;
     /*border: solid 10px;*/
     color: white;
-    font-size: 18px;   
+    /*font-size: 18px;   */
     cursor: pointer;
 }
 
@@ -148,7 +153,7 @@ button{
     text-decoration: none;
     text-align: center;
     display: inline-block;
-    font-size: 24px;
+    /*font-size: 24px;*/
     color: #000000;
   }
   button:before{
@@ -241,6 +246,11 @@ button{
       border-right-color: transparent;
     }
   }
+
+  .booths-H3{
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
   
 
 /******************
@@ -256,6 +266,12 @@ button{
     left: 50%;
     max-width: auto;
     transform: translate(-50%, 0%);
+}
+
+.time-btn p{
+  font-size: 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
 }
 
 .nested-btn-tid {
@@ -402,13 +418,16 @@ width: 300px;
 
     color: rgb(0, 0, 0);
 
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 24px;
-    font-weight: bold;
+
     cursor: pointer;
     outline: none;
 }
 
+.menu>button p{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+}
 /******************
  * LOADING SPINNER - by Gus Alaniz - https://codepen.io/madebygus/pen/EjBvXR
  */
