--- a/css/step1.css
+++ b/css/step1.css
@@ -33,7 +33,7 @@ body {
 }
 
 .accordion-control {
-    background-color: black
+    background-color: black;
     color: #fff;
     display: block;
     width: 100%;
