--- a/css/modal-window.css
+++ b/css/modal-window.css
@@ -2,7 +2,9 @@
     position: absolute;
     z-index: 1000;
     padding: 50px;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 1.0);
+    border: solid 2px;
+    border-color: azure;
 }
 .modal-close {
     cursor: pointer;
@@ -14,12 +16,12 @@
 }
 
 #helpOptions{
-    background-color: rgb(0, 0, 0);
+    /*background-color: rgb(0, 0, 0);*/
     color: black;
     text-align: center;
     clear: both;
     padding: 15px;
-    border: 10px solid rgb(255, 0, 85);
+    /*border: 10px solid rgb(255, 0, 85);*/
     color: azure;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
